# genver

./: .gitignore  Cargo.toml  README.md
examples/: semver.yaml
src/: genver.yaml  lib.rs  main.rs
