[package]
name = "genver"
version = "0.1.0"
authors = ["pSox <pSox-genver(a)st8l.com>"]
description = "Generic Version eg: Semantic Version like #.#.#[-w#][+#]"

[dependencies]
serde = { version = "*" }
serde_derive = { version = "*" }
serde_yaml = { version = "*" }
clippy = { version = "*", optional = true }
config = { version = "*" }
clap = { version = "*" }
yaml-rust = { version = "*" }
